[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hezar"
version = "0.38.5"
packages = [{ include = "hezar" }]
description = "Hezar: The all-in-one AI library for Persian, supporting a wide variety of tasks and modalities!"
license = "Apache-2.0"
authors = ["Aryan Shekarlaban <arxyzan@gmail.com>"]
maintainers = ["Aryan Shekarlaban <arxyzan@gmail.com>"]
repository = "https://github.com/hezarai/hezar"
homepage = "https://github.com/hezarai"
readme = ["README.md"]
keywords = ["packaging", "poetry"]
documentation = "https://hezarai.github.io/hezar/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = [
    "docs",
    "examples",
    "tests",
    ".gitignore",
    ".git"
]

[tool.poetry.dependencies]
torch = ">=1.10.0"
omegaconf = ">=2.3.0"
transformers = ">=4.28.0"
tokenizers = ">=0.13.0"
datasets = ">=2.9.0"
huggingface_hub = ">=0.12.0"
tensorboard = ">=2.10.0"
scikit-learn = ">=1.0.0"
accelerate = ">=0.27.0"
numpy = {version="1.24.*", optional=true}
scipy = {version="1.11.4", optional=true}
gensim = {version="4.3.2", optional=true}
seqeval = {version=">=1.2.0", optional=true}
jiwer = {version=">=3.*", optional=true}
soundfile = {version=">=0.12.0", optional=true}
librosa = {version=">=0.10.0", optional=true}
pillow = {version=">=9.*,<=10.*", optional=true}
nltk = {version=">=3.8.0", optional=true}
rouge_score = {version="*", optional=true}

[tool.poetry.extras]
nlp = ["seqeval", "jiwer", "nltk", "rouge_score"]
audio = ["soundfile", "librosa", "jiwer"]
vision = ["pillow"]
embeddings = ["gensim", "numpy", "scipy"]
dev = ["pytest", "ruff", "sphinx", "myst-parser", "furo", "sphinx-copybutton"]
all = ["numpy", "gensim", "seqeval", "jiwer", "soundfile", "librosa", "pillow", "nltk", "rouge_score", "scipy"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
ignore = ["C901", "E501", "E741", "W605", "F403", "F405"]
select = ["C", "E", "F", "I", "W"]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811", "I001"]
"*example*.py" = ["F401", "F841", "I001"]
"*test*.py" = ["F401", "F841"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["hezar"]

[tool.ruff.pydocstyle]
convention = "google"
