[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hezar"
version = "0.44.0"
packages = [{ include = "hezar" }]
description = "Hezar: The all-in-one AI library for Persian, supporting a wide variety of tasks and modalities!"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Aryan Shekarlaban", email = "arxyzan@gmail.com" }]
maintainers = [{ name = "Aryan Shekarlaban", email = "arxyzan@gmail.com" }]
keywords = ["nlp", "persian", "ai", "deep-learning", "transformers"]
requires-python = ">=3.11.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "omegaconf>=2.3.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "huggingface_hub",
]

[project.optional-dependencies]
nlp = ["seqeval>=1.2.0", "jiwer>=3.0.0", "nltk>=3.8.0", "rouge_score>=0.1.2"]
audio = ["soundfile>=0.12.0", "librosa>=0.10.0", "jiwer>=3.0.0"]
vision = ["pillow>=9.0.0", "torchvision>=0.15.0", "opencv-python>=4.5.0"]
metrics = ["scikit-learn>=1.0.0", "jiwer>=3.0.0", "nltk>=3.8.0", "rouge_score>=0.1.2", "seqeval>=1.2.0"]
trainer = ["accelerate>=0.27.0,<2", "pandas>=1.5.0", "tensorboard>=2.10.0"]
embeddings = ["gensim<5", "scipy<2"]
dev = ["pytest", "ruff", "sphinx", "myst-parser", "furo", "sphinx-copybutton"]
all = [
    "datasets>=2.9.0,<4",
    "accelerate>=0.27.0,<2", "pandas>=1.5.0", "tensorboard>=2.10.0",  # Trainer
    "gensim<5", "scipy<2",  # Embeddings
    "scikit-learn>=1.0.0", "jiwer>=3.0.0", "nltk>=3.8.0", "rouge_score>=0.1.2", "seqeval>=1.2.0",  # Metrics
    "soundfile>=0.12.0", "librosa>=0.10.0",  # Speech
    "torchvision>=0.15.0", "pillow>=9.0.0", "opencv-python>=4.5.0",  # Vision
    "pytest", "ruff", "sphinx", "myst-parser", "furo", "sphinx-copybutton",  # Dev / docs / tests
]

[project.urls]
Repository = "https://github.com/hezarai/hezar"
Homepage = "https://github.com/hezarai"
Documentation = "https://hezarai.github.io/hezar/"

[tool.hatch.build.targets.wheel]
packages = ["hezar"]

[tool.hatch.build.targets.sdist]
exclude = ["docs", "examples", "tests", ".gitignore", ".git"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
lint.ignore = ["C901", "E501", "E741", "W605", "F403", "F405"]
lint.select = ["C", "E", "F", "I", "W"]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811", "I001"]
"*example*.py" = ["F401", "F841", "I001"]
"*test*.py" = ["F401", "F841"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["hezar"]

[tool.ruff.lint.pydocstyle]
convention = "google"
